--- a/src/_assets/scss/_code.scss
+++ b/src/_assets/scss/_code.scss
@@ -2,11 +2,6 @@
 @media screen and (prefers-color-scheme: dark) {
     html:not(.light) {
         @import "node_modules/highlight.js/scss/railscasts";
-
-        .snippet {
-            background-color: var(--bg-code);
-            scrollbar-color: rgba(gray, 0.5) rgba(black, 0.5);
-        }
     }
 }
 
